2011-08-12  Robert Larice
 * src/spicelib/devices/adms/admst/ngspiceMODULEask.c.xml ,
 * src/spicelib/devices/adms/admst/ngspiceMODULEguesstopology.c.xml ,
 * src/spicelib/devices/adms/admst/ngspiceMODULEload.c.xml ,
 * src/spicelib/devices/adms/admst/ngspiceMODULEmask.c.xml ,
 * src/spicelib/devices/adms/admst/ngspiceMODULEpar.c.xml ,
 * src/spicelib/devices/adms/admst/ngspiceMODULEpzld.c.xml ,
 * src/spicelib/devices/adms/admst/ngspiceMODULEtemp.c.xml ,
 * src/spicelib/devices/adms/admst/ngspiceMakefile.am.xml :
   pull two -adms3 fixes into -adms
     2011-07-25
       convert K&R function definitions to ansi style
       and declare a debug function `static'
     2011-07-26
       swallow unsed variable warnings in adms generated code,
       upgrade dependencies

2011-08-12  Robert Larice
 * src/frontend/plotting/Makefile.am ,
 * src/frontend/plotting/grid.c ,
 * src/frontend/plotting/grid.h ,
 * src/include/grid.h ,
 * visualc/vngspice.vcproj :
   remove second incarnation of `grid.h'

2011-08-11 Holger Vogt
 * xpressn.c: correct #include path for error.h

2011-08-10 Holger Vogt
 * evtplot.c: initilize 'value' to 0
 * xpressn.c: improved error message
 * misccoms.c, main.c, error.c, fteext.h: flag ft_pipemode set
   in main.c, used to optimize or suppress output messages

2011-08-09 Holger Vogt
 * inp2dot.c: align spaces and braces
 * inp2dot.c, examples/pss/*.cir: uic for pss to end of line

2011-08-09 Paolo Nenzi
 * (new) src/include/fteoptdefs.h
 * (new) src/frontend/ftesopt.c
 * (new) src/frontend/inventory.c
 * src/frontend/commands.c
 * src/frontend/device.c
 * src/frontend/device.h
 * src/frontend/inp.c
 * src/frontend/mw_coms.c
 * src/frontend/resource.c
 * src/frontend/ftedefs.h
 * src/frontend/fteext.h
 * src/frontend/optdefs.h
 * src/spicelib/devices/cktcrte.c
 * src/spicelib/devices/cktinit.c
   added "frontend statistics" to the acct command:
   netlist loading and parsing time and number of
   lines. Added "devhelp" command to show available