@@ -3618,13 +3618,10 @@ int $(module)temp(GENmodel *inModel, CKTcircuit *ckt)
 ## Process this file with automake to produce Makefile.in
 
 ADMSXMLINTERFACE=\$(srcdir)/../admst
-$(module).c: \$(ADMSXMLINTERFACE)/ngspice.xml
-$(module).c: admsva/$(module).va
-	admsXml -I\$(srcdir) -I\$(srcdir)/admsva -f \$(srcdir)/admsva/$(module).va -e \$(ADMSXMLINTERFACE)/ngspice.xml
 
 noinst_LTLIBRARIES = lib$(module).la
 
-lib$(module)_la_SOURCES = 	\\
+BUILT_SOURCES = \\
 	$(module).c		\\
 	$(module).hxx		\\
 	$(module)acld.c	\\
@@ -3647,53 +3644,11 @@ lib$(module)_la_SOURCES = 	\\
 	$(module)temp.c	\\
 	$(module)trunc.c
 
-BUILT_SOURCES = 	\\
-	$(module).c		\\
-	$(module).hxx		\\
-	$(module)acld.c	\\
-	$(module)ask.c	\\
-	$(module)defs.h	\\
-	$(module)del.c	\\
-	$(module)dest.c	\\
-	$(module)ext.h	\\
-	$(module)guesstopology.c	\\
-	$(module)init.c	\\
-	$(module)init.h	\\
-	$(module)itf.h	\\
-	$(module)load.c	\\
-	$(module)mask.c	\\
-	$(module)mdel.c	\\
-	$(module)mpar.c	\\
-	$(module)par.c	\\
-	$(module)pzld.c	\\
-	$(module)setup.c	\\
-	$(module)temp.c \\
-	$(module)trunc.c
+lib$(module)_la_SOURCES = \\
+	\$(BUILT_SOURCES)
 
-CLEANFILES = 		\\
-	$(module).c		\\
-	$(module).hxx		\\
-	$(module).c.bak	\\
-	$(module)acld.c	\\
-	$(module)ask.c	\\
-	$(module)defs.h	\\
-	$(module)del.c	\\
-	$(module)dest.c	\\
-	$(module)ext.h	\\
-	$(module)guesstopology.c	\\
-	$(module)init.c	\\
-	$(module)init.h	\\
-	$(module)itf.h	\\
-	$(module)load.c	\\
-	$(module)mask.c	\\
-	$(module)mdel.c	\\
-	$(module)mpar.c	\\
-	$(module)par.c	\\
-	$(module)pzld.c	\\
-	$(module)setup.c	\\
-	$(module)temp.c	\\
-	$(module)noise.c	\\
-	$(module)trunc.c \\
+CLEANFILES = \\
+	\$(BUILT_SOURCES) \\
 	.$(module).va.adms \\
 	.adms.implicit.xml \\
 	.interface.xml \\
@@ -3707,6 +3662,13 @@ CLEANFILES = 		\\
 AM_CPPFLAGS = -I\$(top_srcdir)/src/include
 
 MAINTAINERCLEANFILES = Makefile.in
+
+%.c %.hxx \\
+	%acld.c %ask.c %defs.h %del.c %dest.c %ext.h %guesstopology.c \\
+	%init.c %init.h %itf.h %load.c %mask.c %mdel.c %mpar.c %par.c \\
+        %pzld.c %setup.c %temp.c %trunc.c \\
+: \$(srcdir)/admsva/%.va \$(ADMSXMLINTERFACE)/ngspice.xml
+	admsXml -I\$(srcdir) -I\$(srcdir)/admsva -f \$&lt; -e \$(ADMSXMLINTERFACE)/ngspice.xml
 
 </admst:template>
     <admst:if test="[exists(/argv[.='--create_makefile_am'])]">
